Domain model refactoring (#63)
* Domain model simplification
* Useless Ref classes removed
* Interface IDomainEntity updated, IValueObject removed
* FoodDetailsInstance added to optimize FoodDetails calculations
* FoodDetails interface refactoring
* Product models lombok usage adjusted
* Domain model refactoring completed