@@ -1,19 +1,18 @@
 package com.outdoor.foodcalc.service;
 
 import com.outdoor.foodcalc.domain.exception.NotFoundException;
-import com.outdoor.foodcalc.domain.model.ProductsContainer;
-import com.outdoor.foodcalc.domain.model.dish.DishRef;
+import com.outdoor.foodcalc.domain.model.DishesContainer;
+import com.outdoor.foodcalc.domain.model.dish.Dish;
 import com.outdoor.foodcalc.domain.model.meal.Meal;
-import com.outdoor.foodcalc.domain.model.meal.MealRef;
 import com.outdoor.foodcalc.domain.model.meal.MealType;
-import com.outdoor.foodcalc.domain.model.plan.DayPlan;
-import com.outdoor.foodcalc.domain.model.plan.DayPlanRef;
+import com.outdoor.foodcalc.domain.model.plan.PlanDay;
 import com.outdoor.foodcalc.domain.model.plan.FoodPlan;
 import com.outdoor.foodcalc.domain.service.meal.MealTypeDomainService;
 import org.springframework.stereotype.Component;
 
 import javax.annotation.PostConstruct;
 import java.time.LocalDate;
+import java.time.ZonedDateTime;
 import java.util.*;
 
 //TODO temporary holder \ repository for food plans \ days \ meals \ dishes
@@ -36,31 +35,32 @@ public class FoodPlansRepo {
         //dummy initialization for UI
 //        var mealTypes = mealTypeService.getMealTypes();
 //        Random random = new Random();
-//        List<MealRef> mealRefs1 = List.of(buildRandomMeal(10101L, mealTypes, random), buildRandomMeal(10102L, mealTypes, random));
-//        List<MealRef> mealRefs2 = List.of(buildRandomMeal(10103L, mealTypes, random), buildRandomMeal(10104L, mealTypes, random));
-//        List<MealRef> mealRefs3 = List.of(buildRandomMeal(10105L, mealTypes, random), buildRandomMeal(10106L, mealTypes, random));
-        List<MealRef> mealRefs1 = Collections.emptyList();
-        List<MealRef> mealRefs2 = Collections.emptyList();
-        List<MealRef> mealRefs3 = Collections.emptyList();
+//        List<Meal> mealRefs1 = List.of(buildRandomMeal(10101L, mealTypes, random), buildRandomMeal(10102L, mealTypes, random));
+//        List<Meal> mealRefs2 = List.of(buildRandomMeal(10103L, mealTypes, random), buildRandomMeal(10104L, mealTypes, random));
+//        List<Meal> mealRefs3 = List.of(buildRandomMeal(10105L, mealTypes, random), buildRandomMeal(10106L, mealTypes, random));
+        List<Meal> mealRefs1 = Collections.emptyList();
+        List<Meal> mealRefs2 = Collections.emptyList();
+        List<Meal> mealRefs3 = Collections.emptyList();
 
-        DayPlan day11 = new DayPlan(101L, LocalDate.of(2023, 11, 23), mealRefs1, Collections.emptyList(), Collections.emptyList());
+        PlanDay day11 = new PlanDay(101L, LocalDate.of(2023, 11, 23), "", mealRefs1, Collections.emptyList(), Collections.emptyList());
         day11.setDescription("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.");
-        DayPlan day12 = new DayPlan(102L, LocalDate.of(2023, 11, 24), mealRefs2, Collections.emptyList(), Collections.emptyList());
+        PlanDay day12 = new PlanDay(102L, LocalDate.of(2023, 11, 24), "", mealRefs2, Collections.emptyList(), Collections.emptyList());
         day12.setDescription("Dummy Lorem ipsum");
-        DayPlan day21 = new DayPlan(103L, LocalDate.of(2023, 9, 19), mealRefs3, Collections.emptyList(), Collections.emptyList());
+        PlanDay day21 = new PlanDay(103L, LocalDate.of(2023, 9, 19), "", mealRefs3, Collections.emptyList(), Collections.emptyList());
         day21.setDescription("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.");
 
-        FoodPlan planA = new FoodPlan(1L, "Test plan A", "", 2, 5, List.of(new DayPlanRef(day11), new DayPlanRef(day12)));
-        FoodPlan planB = new FoodPlan(2L, "Test food plan B", "", 3, 8, List.of(new DayPlanRef(day21)));
+        var now = ZonedDateTime.now();
+        FoodPlan planA = new FoodPlan(1L, "Test plan A", "", 2, now, now, List.of(day11, day12));
+        FoodPlan planB = new FoodPlan(2L, "Test food plan B", "", 3, now, now, List.of(day21));
         foodPlans.put(1L, planA);
         foodPlans.put(2L, planB);
     }
 
-    private MealRef buildRandomMeal(long id, List<MealType> types, Random random) {
+    private Meal buildRandomMeal(long id, List<MealType> types, Random random) {
         var type = types.get(random.nextInt(types.size()));
-        Meal meal = new Meal(id, type, Collections.emptyList(), Collections.emptyList());
+        Meal meal = new Meal(id, "", type, Collections.emptyList(), Collections.emptyList());
         meal.setDescription("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore " + type.getName());
-        return new MealRef(meal);
+        return meal;
     }
 
     public long getMaxPlanIdAndIncrement() {
@@ -96,7 +96,7 @@ public class FoodPlansRepo {
         foodPlans.put(foodPlan.getId(), foodPlan);
     }
 
-    public DayPlanRef getDay(long planId, long id) {
+    public PlanDay getDay(long planId, long id) {
         var plan = getFoodPlan(planId);
         return plan.getDays().stream()
                 .filter(day -> id == day.getDayId())
@@ -104,7 +104,7 @@ public class FoodPlansRepo {
                 .orElseThrow(() -> new NotFoundException("Food plan day with id = " + id + " wasn't found"));
     }
 
-    public MealRef getMeal(long planId, long dayId, long id) {
+    public Meal getMeal(long planId, long dayId, long id) {
         var day = getDay(planId, dayId);
         return day.getMeals().stream()
                 .filter(meal -> id == meal.getMealId())
@@ -112,50 +112,49 @@ public class FoodPlansRepo {
                 .orElseThrow(() -> new NotFoundException("Meal with id = " + id + " wasn't found"));
     }
 
-    public void updateDayInPlan(FoodPlan plan, DayPlan day, String description) {
+    public void updateDayInPlan(FoodPlan plan, PlanDay day, String description) {
         day.setDescription(description);
-        for (int i = 0; i < plan.getDays().size(); i++) {
-            if (plan.getDays().get(i).getDayId() == day.getDayId()) {
-                var days = new ArrayList<>(plan.getDays());
-                days.set(i, new DayPlanRef(day));
-                plan.setDays(days);
+        var planDays = plan.getDays();
+        for (int i = 0; i < planDays.size(); i++) {
+            if (planDays.get(i).getDayId() == day.getDayId()) {
+                planDays.set(i, day);
             }
         }
+        plan.setLastUpdated(ZonedDateTime.now());
     }
 
-    public void updateMealInDay(FoodPlan plan, DayPlanRef day, Meal meal, String description) {
+    public void updateMealInDay(FoodPlan plan, PlanDay day, Meal meal, String description) {
         meal.setDescription(description);
-        var meals = new ArrayList<>(day.getMeals());
+        var meals = day.getMeals();
         for (int i = 0; i < meals.size(); i++) {
             if (meals.get(i).getMealId() == meal.getMealId()) {
-                meals.set(i, new MealRef(meal));
+                meals.set(i, meal);
             }
         }
-        DayPlan newDay = new DayPlan(day.getDayId(), day.getDate(), meals, day.getDishes(), day.getProducts());
-        updateDayInPlan(plan, newDay, day.getDescription());
+        plan.setLastUpdated(ZonedDateTime.now());
     }
 
-    public Optional<DishRef> getDishById(List<DishRef> dishes, long id) {
+    public Optional<Dish> getDishById(List<Dish> dishes, long id) {
         return dishes.stream()
                 .filter(dish -> dish.getDishId() == id)
                 .findFirst();
     }
 
-    public List<DishRef> rebuildDishes(List<DishRef> dishes, List<Long> ids) {
-        List<DishRef> newDishes = new ArrayList<>();
+    public List<Dish> reorderDishes(List<Dish> dishes, List<Long> ids) {
+        List<Dish> newDishes = new ArrayList<>();
         ids.forEach(id -> getDishById(dishes, id)
                 .ifPresent(newDishes::add));
         return newDishes;
     }
 
-    public Optional<ProductsContainer> getDishOwner(long dishId) {
+    public Optional<DishesContainer> getDishOwner(long dishId) {
         for (FoodPlan plan : foodPlans.values()) {
-            for (DayPlanRef day : plan.getDays()) {
+            for (PlanDay day : plan.getDays()) {
                 var dishRef = day.getDishes().stream().filter(dish -> dish.getDishId() == dishId).findFirst();
                 if (dishRef.isPresent()) {
                     return Optional.of(day);
                 }
-                for (MealRef meal : day.getMeals()) {
+                for (Meal meal : day.getMeals()) {
                     dishRef = meal.getDishes().stream().filter(dish -> dish.getDishId() == dishId).findFirst();
                     if (dishRef.isPresent()) {
                         return Optional.of(meal);
@@ -169,7 +168,7 @@ public class FoodPlansRepo {
     public FoodPlan getPlanByDayId(long dayId) {
         FoodPlan thePlan = null;
         for (FoodPlan plan : foodPlans.values()) {
-            for (DayPlanRef day : plan.getDays()) {
+            for (PlanDay day : plan.getDays()) {
                 if (day.getDayId() == dayId) {
                     thePlan = plan;
                     break;
@@ -179,10 +178,10 @@ public class FoodPlansRepo {
         return thePlan;
     }
 
-    public DayPlanRef getDayByMealId(long mealId) {
+    public PlanDay getDayByMealId(long mealId) {
         for (FoodPlan plan : foodPlans.values()) {
-            for (DayPlanRef day : plan.getDays()) {
-                for (MealRef meal : day.getMeals()) {
+            for (PlanDay day : plan.getDays()) {
+                for (Meal meal : day.getMeals()) {
                     if (meal.getMealId() == mealId) {
                         return day;
                     }
